tests/miniJava/neg/005274_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] String java ( ) { return 0 ; } }
